[gd_scene load_steps=2 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 378.0
margin_top = 405.0
margin_right = 637.0
margin_bottom = 454.0

[node name="Button" type="Button" parent="."]
margin_left = 187.0
margin_top = 337.0
margin_right = 248.0
margin_bottom = 374.0
text = "Coletar dados"

[node name="Button2" type="Button" parent="."]
margin_left = 454.0
margin_top = 338.0
margin_right = 575.0
margin_bottom = 371.0
text = "Incrementar nmr"

[node name="Button3" type="Button" parent="."]
margin_left = 713.0
margin_top = 337.0
margin_right = 849.0
margin_bottom = 371.0
text = "detectar nmr impar"

[node name="Label" type="Label" parent="."]
margin_left = 194.0
margin_top = 125.0
margin_right = 757.0
margin_bottom = 292.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
